# blinky

./: CMakeLists.txt  CONFIGURATION.md  MODES.md  MONITORING.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  VERSIONING.md  blinky-check.sh  blinky-me.py  blinky-monitor.py  config.toml.example  install-agent.sh  install-collector.sh  install-from-source.sh  install.sh  uninstall-agent.sh  uninstall-collector.sh  uninstall.sh
.github/workflows/: manual-release.yml  release.yml  version-check.yml
agent/: CMakeLists.txt
agent/include/: collector.h  http_api.h  local_storage.h  system_info.h  temperature_monitor.h  upgrade.h  websocket_client.h
agent/src/: collector.cpp  container_monitor.cpp  cpu_monitor.cpp  disk_monitor.cpp  kubernetes_monitor.cpp  main.cpp  memory_monitor.cpp  network_monitor.cpp  smart_monitor.cpp  systemd_monitor.cpp  websocket_client.cpp
collector/: CMakeLists.txt
collector/include/: http_server.h  metrics_store.h  websocket_server.h
collector/src/: http_server.cpp  main.cpp  metrics_store.cpp  websocket_server.cpp
docs/: RELEASE-GUIDE.md
include/: blinky.h
scripts/: release.sh
shared/: CMakeLists.txt
shared/include/: config.h  metrics.h  protocol.h  version.h
shared/src/: metrics.cpp  protocol.cpp  version.cpp
src/: main.cpp
